# ecommerce-api

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  TESTING.md  deploy.sh  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3b7c0c2d58f1_add_carts_tables.py  6696a27a871f_add_products_table.py  a8443e3aea92_initial_migration_created_users_table.py  af8c15a6df53_add_orders_tables.py  d0e7bd1c7e8f_add_addresses_and_user_phone.py
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: __init__.py  auth.py  cart.py  payments.py  products.py  users.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  address.py  cart.py  order.py  product.py  user.py
app/schemas/: __init__.py  address.py  cart.py  order.py  product.py  user.py
app/services/: email.py
docker/: entrypoint.sh
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  namespace.yaml  secrets.yaml  service.yaml
monitoring/: prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: fastapi.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
nginx/: nginx.conf
terraform/: eks.tf  ingress.tf  main.tf  outputs.tf  rds.tf  variables.tf  versions.tf  vpc.tf
tests/: README.md  conftest.py  test_auth.py  test_cart.py  test_payments.py  test_products.py  test_users.py
